Fix #996 - "Stop alias name from flickering" (#1000)

--- a/static/scss/partials/dashboard.scss
+++ b/static/scss/partials/dashboard.scss
@@ -185,10 +185,9 @@
 
 .c-alias-name {
     margin-left: $spacing-xs;
-    max-width: 100%;
+    max-width: $content-sm;
     height: 100%;
     flex-wrap: nowrap;
-    width: $content-sm;
 
     .additional-notes, .relay-address {
         text-overflow: ellipsis;
